# Polynomials

./: CMakeLists.txt  Polynomial.cpp  README.md  excerpt.cpp  excerpt.h
analysis/: main.ipynb
polynomials/: CMakeLists.txt
polynomials/inc/: excerpt.h  modules.h  polynomials.h
polynomials/src/: excerpt.cpp  main.cpp  modules.cpp  polynomials.cpp
